Add pyzipper and qrcode to requirements.txt
Added pyzipper and qrcode to the requirements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 moviepy
 pygame
 speedtest-cli
+pyzipper
 python-nmap
 colorama
 pygetwindow
@@ -8,5 +9,5 @@ pyautogui
 keyboard
 comtypes
 pycaw
-pyinstaller
 art
+qrcode
